[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/Startup.gd" type="Script" id=1]
[ext_resource path="res://assets/icons/close.svg" type="Texture" id=2]
[ext_resource path="res://assets/icons/close_hover.svg" type="Texture" id=3]
[ext_resource path="res://assets/icons/close_pressed.svg" type="Texture" id=4]
[ext_resource path="res://assets/font/JetBrainsMono-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=4]
resource_name = "message"
length = 7.0
tracks/0/type = "value"
tracks/0/path = NodePath("Message:margin_right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 6, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 192, -40.0, -40.0, 192 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Message:margin_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 7 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Message:grow_horizontal")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Message:margin_bottom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -70.0, -70.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "page1"
length = 2.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/WelcomeLabel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.25, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer/WelcomeLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.25, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MarginContainer/Page1:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.25, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MarginContainer/Page1:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=5]
resource_name = "page2"
length = 1.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/Page1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer/Page1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MarginContainer/Page2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MarginContainer/Page2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Startup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="WelcomeLabel" type="Label" parent="MarginContainer"]
margin_left = 20.0
margin_top = 256.0
margin_right = 1004.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 3 )
text = "Welcome to VoxelFun!"
align = 1

[node name="Page1" type="CenterContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 556.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Page1"]
margin_left = 329.0
margin_top = 214.0
margin_right = 655.0
margin_bottom = 322.0

[node name="NameLineEdit" type="LineEdit" parent="MarginContainer/Page1/VBoxContainer"]
margin_right = 326.0
margin_bottom = 32.0
rect_min_size = Vector2( 192, 0 )
align = 1
placeholder_text = "Enter your name"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Page1/VBoxContainer"]
margin_top = 36.0
margin_right = 326.0
margin_bottom = 68.0

[node name="HostButton" type="Button" parent="MarginContainer/Page1/VBoxContainer/HBoxContainer"]
margin_right = 52.0
margin_bottom = 32.0
text = "Host"

[node name="Label" type="Label" parent="MarginContainer/Page1/VBoxContainer/HBoxContainer"]
margin_left = 56.0
margin_top = 5.0
margin_right = 76.0
margin_bottom = 27.0
text = "or"

[node name="ConnectButton" type="Button" parent="MarginContainer/Page1/VBoxContainer/HBoxContainer"]
margin_left = 80.0
margin_right = 192.0
margin_bottom = 32.0
text = "Connect to"

[node name="AddressLineEdit" type="LineEdit" parent="MarginContainer/Page1/VBoxContainer/HBoxContainer"]
margin_left = 196.0
margin_right = 326.0
margin_bottom = 32.0
align = 1
placeholder_text = "server"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/Page1/VBoxContainer"]
margin_top = 72.0
margin_right = 326.0
margin_bottom = 76.0
size_flags_horizontal = 3

[node name="OfflineButton" type="Button" parent="MarginContainer/Page1/VBoxContainer"]
margin_top = 80.0
margin_right = 326.0
margin_bottom = 108.0
text = "Play Offline"

[node name="Page2" type="VBoxContainer" parent="MarginContainer"]
visible = false
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 556.0

[node name="Label" type="Label" parent="MarginContainer/Page2"]
margin_right = 984.0
margin_bottom = 22.0
text = "Choose your world:"
align = 1

[node name="WorldsList" type="ItemList" parent="MarginContainer/Page2"]
margin_top = 26.0
margin_right = 984.0
margin_bottom = 504.0
size_flags_vertical = 3
max_columns = 0
same_column_width = true
icon_mode = 0

[node name="Actions" type="HBoxContainer" parent="MarginContainer/Page2"]
margin_top = 508.0
margin_right = 984.0
margin_bottom = 536.0
alignment = 1

[node name="NewButton" type="Button" parent="MarginContainer/Page2/Actions"]
margin_right = 325.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "New"

[node name="OpenButton" type="Button" parent="MarginContainer/Page2/Actions"]
margin_left = 329.0
margin_right = 654.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "Open"

[node name="DeleteButton" type="Button" parent="MarginContainer/Page2/Actions"]
margin_left = 658.0
margin_right = 984.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "Delete"

[node name="Message" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -106.0
margin_right = 192.0
margin_bottom = -70.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 192, 36 )
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Message"]
margin_left = 7.0
margin_top = 7.0
margin_right = 185.0
margin_bottom = 29.0
align = 1

[node name="NewWorldDialog" type="ConfirmationDialog" parent="."]
margin_right = 280.0
margin_bottom = 116.0
window_title = "New World"

[node name="GridContainer" type="GridContainer" parent="NewWorldDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 297.0
margin_bottom = 72.0
columns = 2

[node name="NameLabel" type="Label" parent="NewWorldDialog/GridContainer"]
margin_top = 5.0
margin_right = 60.0
margin_bottom = 27.0
text = "Name: "

[node name="NameLineEdit" type="LineEdit" parent="NewWorldDialog/GridContainer"]
margin_left = 64.0
margin_right = 289.0
margin_bottom = 32.0
rect_min_size = Vector2( 225, 0 )
placeholder_text = "Type a cool name..."

[node name="TypeLabel" type="Label" parent="NewWorldDialog/GridContainer"]
margin_top = 39.0
margin_right = 60.0
margin_bottom = 61.0
text = "Type: "

[node name="TypeOptionButton" type="OptionButton" parent="NewWorldDialog/GridContainer"]
margin_left = 64.0
margin_top = 36.0
margin_right = 289.0
margin_bottom = 64.0
text = "Forest"
items = [ "Forest", null, false, 0, null, "Desert", null, false, 1, null, "Boreal", null, false, 2, null, "Cave", null, false, 3, null ]
selected = 0

[node name="DeleteConfirmation" type="ConfirmationDialog" parent="."]
margin_right = 218.0
margin_bottom = 74.0
dialog_text = "Are you sure to continue and delete the selected world?"

[node name="ModalMessage" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="ModalMessage"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Connecting..."
align = 1
valign = 1

[node name="QuitButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -24.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 24.0
hint_tooltip = "Quit"
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "page1"
anims/message = SubResource( 4 )
anims/page1 = SubResource( 2 )
anims/page2 = SubResource( 5 )

[connection signal="pressed" from="MarginContainer/Page1/VBoxContainer/HBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="MarginContainer/Page1/VBoxContainer/HBoxContainer/ConnectButton" to="." method="_on_connect_button_pressed"]
[connection signal="pressed" from="MarginContainer/Page1/VBoxContainer/OfflineButton" to="AnimationPlayer" method="play" binds= [ "page2" ]]
[connection signal="item_activated" from="MarginContainer/Page2/WorldsList" to="." method="open"]
[connection signal="pressed" from="MarginContainer/Page2/Actions/NewButton" to="NewWorldDialog" method="popup_centered"]
[connection signal="pressed" from="MarginContainer/Page2/Actions/OpenButton" to="." method="_on_open_button_pressed"]
[connection signal="pressed" from="MarginContainer/Page2/Actions/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="confirmed" from="NewWorldDialog" to="." method="_on_new_world_dialog_confirmed"]
[connection signal="confirmed" from="DeleteConfirmation" to="." method="_on_delete_confirmation_confirmed"]
[connection signal="pressed" from="QuitButton" to="." method="_quit"]
